# sy-lance

./: README.md  README.md.bk  W PHX INVENTORY_updated.xlsx  blank.txt  inventory.json  inventory.py  mounting.txt  output.json  school_work_notes.md  test.txt  test_git_conn.bash
abyss/: arch_wallpaper_swaper  arch_wallpaper_swaper.go  inventory.json  inventory.py  inventory_backup_20250701_071150.json  iventory_picker.py  pyproject.toml  test  test.go
atna_settings/: .zshrc
music/sy-music/: downloader.py
music/sy-music/others/: downloader.py  music.json
projects/: W PHX INVENTORY_updated.xlsx  inventory.py  pyvenv.cfg
projects2/: pyvenv.cfg
quick/: pyvenv.cfg
star_system/: W PHX INVENTORY.xlsx  data.json  inventory.json  phone_instructions  pyproject.toml  weekly.json
star_system/src/star_system/: iventory_picker.py  requirements.txt  test.py
