[project]
name = "abyss"
version = "0.1.0"
description = "my coding project"
authors = [
    {name = "sy-md",email = "crazymartell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "pyinquirer (>=1.0.3,<2.0.0)",
    "prompt-toolkit (==1.0.14)",
    "collection (>=0.1.6,<0.2.0)",
    "mapping (>=0.1.6,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
